examples/neg/high_auction/bob.oio
BOB

channel AUCTIONHOUSE/BID@{H} : (string@{}*int@{H})@{} [AUCTIONHOUSE/BID:1; ALICE/AUCTION_STATUS:1;BOB/AUCTION_STATUS:1;ALICE/AUCTION_OVER:1;BOB/AUCTION_OVER:1];

var bid : int@{H} = 0;
var max_bid : int@{H} = 350;

AUCTION_STATUS@{H} (winning_bid : (string@{H}*int@{H})@{H}) [AUCTIONHOUSE/BID:1; ALICE/AUCTION_STATUS:1;BOB/AUCTION_STATUS:1;ALICE/AUCTION_OVER:1;BOB/AUCTION_OVER:1] {
    oblif fst winning_bid != "Bob"
    then
        oblif snd winning_bid < max_bid 
        then bid ?= snd winning_bid + 1;
        else bid ?= -1;
    else bid ?= 0;
    send(AUCTIONHOUSE/BID, ("Bob", bid));
}

AUCTION_OVER@{H} (winner : (string@{H}*int@{H})@{H}) {
    print("Auction won by", fst winner);
    print("Winning bid was", snd winner);
}
